--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-    <title>{% block title %}Hypnotherapy{% endblock %}</title>
+    <title>{% block title %}Be Set Free{% endblock %}</title>
 
     {% block css %}
         <link href="/vendor/normalize.css/normalize.css" rel="stylesheet">
@@ -18,9 +18,7 @@
 
 	<div class="flex-parent">
 		<nav class="flex-child nav"></nav>
-		<div class="flex-child">
-			<div ng-view></div>
-		</div>
+		<div class="flex-child" ng-view></div>
 	</div>
 
 
