--- a/assets/css/structure/main.less
+++ b/assets/css/structure/main.less
@@ -1,5 +1,9 @@
-html, body, .ng-scope {
+html, body {
   width: 100%;
+  height: 100%;
+}
+
+.full-height {
   height: 100%;
 }
 
@@ -21,6 +25,7 @@ html, body, .ng-scope {
   align-items: stretch;
   width: 100%;
   height: 100%;
+  overflow: auto;
 
   .flex-column {
     flex-flow: column nowrap;
