--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,6 +2,7 @@
 <html ng-app="app">
 <head>
     <title>{% block title %}Be Set Free{% endblock %}</title>
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
     {% block css %}
         <link href="/vendor/normalize.css/normalize.css" rel="stylesheet">
