--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,7 +19,7 @@
 
 	<div class="flex-parent">
 		<nav class="flex-child nav"></nav>
-		<div class="flex-child" ng-view></div>
+		<div class="flex-child content-holder" ng-view></div>
 	</div>
 
 
