--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -2,12 +2,24 @@
 
 * {
   outline: 0;
+  box-sizing: border-box;
 }
 
 
 html, body, #app {
   width: 100%;
   height: 100%;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.6em;
+  margin: 0;
+}
+
+
+dd {
+  margin: 0;
+}
+
+img {
+  width: 100%;
+  padding: 1em;
 }
