--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,8 +1,30 @@
 @import 'base';
 
-p {
-  font-size: 2rem;
-  line-height: 1.6em;
+.full-height {
+  min-height: 100%;
+}
+
+.flex-parent {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: stretch;
+
+  & > div {
+    flex: 1 1 auto;
+  }
+}
+
+
+.flex-parent .sidebar {
+  flex-basis: 15em;
+  flex-shrink: 0;
+  text-align: center;
+  background: linear-gradient(rgb(6, 10, 11), rgb(120, 199, 184));
+}
+
+.logo {
+  margin-top: 4em;
+  width: 9em;
 }
 
 .navLinks {
@@ -12,4 +34,38 @@ p {
   a {
     color: white;
   }
+}
+
+
+
+.page {
+  & > div {
+    margin: 1em;
+    padding: 1em;
+    background: rgba(255, 255, 255, 0.67);
+    border-radius: 0.25em;
+  }
+}
+
+.heading {
+
+}
+
+.btn-submit {
+  padding: 1em;
+  font-size: 0.9em;
+  border-radius: 0.25em;
+  border: 0;
+  line-height: 0;
+}
+
+.page-contact {
+  background: url('/static/img/bg_contact.jpg') no-repeat fixed 100% center;
+}
+
+.flex-parent .contact-form {
+  flex: 0.5 0 14em;
+  margin-left: 1em;
+  padding-left: 2em;
+  border-left: 1px solid #aaa;
 }
