--- a/gae/src/templates/index.html
+++ b/gae/src/templates/index.html
@@ -12,8 +12,7 @@
     <div id="app"></div>
 
 	{% block javascripts %}
-	<script src="/static/js/vendor.min.js" type="text/javascript"></script>
-    <script src="/static/js/besetfree.js" type="text/javascript"></script>
+    <script src="http://localhost:8989/static/build/besetfree.js" type="text/javascript"></script>
     {% endblock %}
 
 </body>
