--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -1,1 +1,7 @@
 /** variables **/
+
+/** pallette **/
+@white: white;
+@yellow: #E7EB10;
+@lightgray: rgba(190, 190, 190, 1);
+@darkgray: rgba(86, 85, 85, 1);
