--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -1,19 +1,20 @@
 @import 'variables';
+@import url('//fonts.googleapis.com/css?family=Open+Sans');
 
 * {
   outline: 0;
   box-sizing: border-box;
 }
 
-
 html, body, #app {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300;
   width: 100%;
   height: 100%;
   font-size: 18px;
   line-height: 1.6em;
   margin: 0;
 }
-
 
 dd {
   margin: 0;
@@ -23,3 +24,9 @@ img {
   width: 100%;
   padding: 1em;
 }
+
+.wrapper {
+  width: 60em;
+  margin: 0 auto;
+}
+
