--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,8 +1,61 @@
 @import 'base';
 
-.full-height {
-  min-height: 100%;
+/** navigation **/
+
+nav {
+  text-align: center;
+  background: @white;
+  color: @darkgray;
+  box-shadow: inset 0px 15px 15px -15px rgba(0, 0, 0, 0.5);
+
+  .wrapper {
+    display: flex;
+  }
+
+  .brand {
+    flex: 0 0 15em;
+    background: #E7EB10;
+    padding: 0em 1em;
+
+    .title {
+      font-family: "Droid Serif";
+      font-size: 1.166em;
+      color: @white;
+      padding: 0;
+      margin-bottom: 0;
+    }
+
+    .subtitle {
+      font-size: 0.722em;
+      margin-top: 0;
+    }
+  }
+
+  .links {
+    font-family: "open sans";
+    font-size: 0.861em;
+    flex: 1 1 auto;
+    display: flex;
+    align-items: center;
+
+    div {
+      flex: 1 1 auto;
+      a {
+        text-decoration: none;
+        color: @darkgray;
+
+        &:hover {
+          color: @lightgray;
+        }
+
+        &.active {
+          color: @lightgray;
+        }
+      }
+    }
+  }
 }
+
 
 .flex-parent {
   display: flex;
@@ -13,29 +66,6 @@
     flex: 1 1 auto;
   }
 }
-
-
-.flex-parent .sidebar {
-  flex-basis: 15em;
-  flex-shrink: 0;
-  text-align: center;
-  background: linear-gradient(rgb(6, 10, 11), rgb(120, 199, 184));
-}
-
-.logo {
-  margin-top: 4em;
-  width: 9em;
-}
-
-.navLinks {
-  list-style: none;
-  margin: 2em 0 0;
-  padding: 0;
-  a {
-    color: white;
-  }
-}
-
 
 
 .page {
