--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -1,5 +1,7 @@
 @import 'variables';
 @import url('//fonts.googleapis.com/css?family=Open+Sans');
+@import url('//fonts.googleapis.com/css?family=Droid+Serif');
+
 
 * {
   outline: 0;
@@ -7,13 +9,15 @@
 }
 
 html, body, #app {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  //font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: Droid Serif;
   font-weight: 300;
   width: 100%;
   height: 100%;
   font-size: 18px;
   line-height: 1.6em;
   margin: 0;
+  color: @darkgray;
 }
 
 dd {
@@ -28,5 +32,6 @@ img {
 .wrapper {
   width: 60em;
   margin: 0 auto;
+  padding: 0;
 }
 
