--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1,56 +1,61 @@
 @import 'base';
+@import 'nav';
+@import 'footer';
+@import 'about';
 
-/** navigation **/
 
-nav {
-  text-align: center;
-  background: @white;
-  color: @darkgray;
-  box-shadow: inset 0px 15px 15px -15px rgba(0, 0, 0, 0.5);
+/** home **/
 
-  .wrapper {
-    display: flex;
-  }
+.home {
+  .jumbo {
+    background: url('/static/img/home.jpg') no-repeat fixed center center;
+    background-size: cover;
 
-  .brand {
-    flex: 0 0 15em;
-    background: #E7EB10;
-    padding: 0em 1em;
+    .hero {
+      background: rgba(255, 255, 255, 0.75);
+      padding: 8em 4em;
+      font-size: 0.9em;
+      line-height: 2.5em;
+      color: @darkgray;
+      margin-left: 34em;
+      width: 22em;
 
-    .title {
-      font-family: "Droid Serif";
-      font-size: 1.166em;
-      color: @white;
-      padding: 0;
-      margin-bottom: 0;
-    }
-
-    .subtitle {
-      font-size: 0.722em;
-      margin-top: 0;
-    }
-  }
-
-  .links {
-    font-family: "open sans";
-    font-size: 0.861em;
-    flex: 1 1 auto;
-    display: flex;
-    align-items: center;
-
-    div {
-      flex: 1 1 auto;
-      a {
-        text-decoration: none;
-        color: @darkgray;
+      button {
+        font-family: "open sans";
+        margin-top: 5em;
+        background: @brown;
+        color: @white;
+        border: 0;
+        padding: 1em;
 
         &:hover {
-          color: @lightgray;
+          background: @green;
         }
+      }
+    }
+  }
 
-        &.active {
-          color: @lightgray;
-        }
+  .bio {
+    display: flex;
+    align-items: stretch;
+    .bio_img {
+      flex: 3 4 auto;
+      img {
+        padding: 0;
+        //height: 100%;
+        //width: auto;
+      }
+    }
+    .bio_text {
+      font-size: 0.84em;
+      line-height: 1.4em;
+      flex: 4 3 auto;
+      background: @verylightgray;
+      padding: 2em 6em;
+      
+      a {
+        color: @lightgreen;
+        text-decoration: none;
       }
     }
   }
@@ -66,7 +71,6 @@ nav {
     flex: 1 1 auto;
   }
 }
-
 
 .page {
   & > div {
