Services better highlighted subnav

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -4,6 +4,8 @@
 @import 'about';
 @import 'services';
 @import 'therapies';
+@import 'courses';
+@import 'contact';
 
 /** home **/
 
@@ -21,8 +23,9 @@
       margin-left: 34em;
       width: 22em;
 
-      button {
+      .book {
         font-family: "open sans";
+        text-decoration: none;
         margin-top: 5em;
         background: @brown;
         color: @white;
