--- a/assets/less/therapies.less
+++ b/assets/less/therapies.less
@@ -8,6 +8,10 @@
     flex-flow: row wrap;
     align-items: baseline;
 
+    .eyes {
+      width: 25em;
+    }
+
     dl {
       flex: 4 1 auto;
       background: @lightgreen;
