--- a/gae/src/templates/index.html
+++ b/gae/src/templates/index.html
@@ -7,7 +7,7 @@
     <div id="app"></div>
 
 	{% block javascripts %}
-    <script src="http://localhost:8989/static/build/besetfree.js" type="text/javascript"></script>
+    <script src="{{ 'http://localhost:9898' if config.DEBUG }}/static/build/besetfree.js" type="text/javascript"></script>
     {% endblock %}
 
 </body>
