#8 added facebook social page plugin to footer

--- a/assets/less/footer.less
+++ b/assets/less/footer.less
@@ -16,7 +16,7 @@ footer {
     padding: 2em 0;
     display: flex;
     justify-content: space-around;
-    align-items: baseline;
+    align-items: center;
 
     & > div {
       flex: 1 1 auto;
@@ -39,5 +39,10 @@ footer {
     .copy {
       padding: 2em 0;
     }
+
+    hr {
+      margin: 1em 4em;
+    }
   }
+
 }
