--- a/gae/src/templates/index.html
+++ b/gae/src/templates/index.html
@@ -4,10 +4,33 @@
     <title>{% block title %}Be Set Free{% endblock %}</title>
 </head>
 <body>
+    <div id="fb-root"></div>
+    <script>
+        window.fbAsyncInit = function () {
+            FB.init({
+                appId: '821956397936477',
+                xfbml: false,
+                version: 'v2.6'
+            });
+            document.dispatchEvent(new Event('fb_init'));
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <div id="app"></div>
 
-	{% block javascripts %}
-    <script src="{{ 'http://localhost:9898' if config.DEBUG }}/static/build/besetfree.js" type="text/javascript"></script>
+    {% block javascripts %}
+        <script src="{{ 'http://localhost:9898' if config.DEBUG }}/static/build/besetfree.js" type="text/javascript"></script>
     {% endblock %}
 
 </body>
