#11 added newsletter signup, closes #11

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -132,3 +132,21 @@
     }
   }
 }
+
+.signup {
+  position: fixed;
+  right: 0.8em;
+  bottom: 0;
+  width: 20em;
+  padding: 1em 2em;
+  color: white;
+  font-size: 0.8rem;
+  line-height: 1.4em;
+  background-color: @lightbrown;
+  p {
+    margin: 1em 0;
+  }
+  button {
+    margin: 0.8em 0 0;
+  }
+}
