#18 and #19 fixed font and text on home page

--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -44,8 +44,9 @@
     }
     div:last-child {
       background: @verylightgray;
-      padding: 4em 3em 2em 3em;
+      padding: 2em 3em 2em 3em;
       align-self: flex-start;
+      font-family: "Open Sans";
     }
   }
 }
