--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -9,8 +9,7 @@
 }
 
 html, body, #app {
-  //font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-family: Droid Serif;
+  font-family: "Open Sans", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
   width: 100%;
   height: 100%;
@@ -18,6 +17,10 @@ html, body, #app {
   line-height: 1.6em;
   margin: 0;
   color: @darkgray;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Droid Serif";
 }
 
 dd {
