--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -25,8 +25,25 @@ dd {
 }
 
 img {
+  width: 100%;
   padding: 0;
   margin: 0;
+}
+
+blockquote {
+  border-left: 0.8em solid rgba(0, 0, 0, 0.2);
+  margin-left: 0.4em;
+  padding-left: 0.8em;
+  cite {
+    font-size: 0.8em;
+  }
+}
+
+button {
+  padding: 0.4em 5em;
+  border-radius: 0.25em;
+  color: #555;
+  background: floralwhite;
 }
 
 .wrapper {
@@ -35,3 +52,14 @@ img {
   padding: 0;
 }
 
+.keyframes(@name; @arguments) {
+  //@-moz-keyframes @name { @arguments(); }
+  //@-webkit-keyframes @name { @arguments(); }
+  @keyframes @name { @arguments(); }
+}
+
+.animation(@arguments) {
+  //-webkit-animation: @arguments;
+  //-moz-animation: @arguments;
+  animation: @arguments;
+}
