--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -49,3 +49,61 @@
     }
   }
 }
+
+/** home **/
+
+.home {
+  .jumbo {
+    background: url('/static/img/home.jpg') no-repeat fixed center center;
+    background-size: cover;
+
+    .hero {
+      background: rgba(255, 255, 255, 0.75);
+      padding: 8em 4em;
+      font-size: 0.9em;
+      line-height: 2.5em;
+      color: @darkgray;
+      margin-left: 34em;
+      width: 22em;
+
+      .book {
+        font-family: "open sans";
+        text-decoration: none;
+        margin-top: 5em;
+        background: @brown;
+        color: @white;
+        border: 0;
+        padding: 1em;
+
+        &:hover {
+          background: @green;
+        }
+      }
+    }
+  }
+
+  .bio {
+    display: flex;
+    align-items: stretch;
+    .bio_img {
+      flex: 3 4 auto;
+      img {
+        padding: 0;
+        //height: 100%;
+        //width: auto;
+      }
+    }
+    .bio_text {
+      font-size: 0.84em;
+      line-height: 1.4em;
+      flex: 4 3 auto;
+      background: @verylightgray;
+      padding: 2em 6em;
+
+      a {
+        color: @lightgreen;
+        text-decoration: none;
+      }
+    }
+  }
+}
