--- a/gae/src/templates/index.html
+++ b/gae/src/templates/index.html
@@ -22,6 +22,7 @@
             }
             js = d.createElement(s);
             js.id = id;
+            js.async = true;
             js.src = "//connect.facebook.net/en_US/sdk.js";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
