Juicing added with optimized images

--- a/assets/less/home.less
+++ b/assets/less/home.less
@@ -54,7 +54,7 @@
 
 .home {
   .jumbo {
-    background: url('/static/img/home.jpg') no-repeat fixed center center;
+    background: url('/static/img/home/main_opt.jpg') no-repeat fixed center center;
     background-size: cover;
 
     .hero {
