#36 pinterest meta added

--- a/gae/src/templates/index.html
+++ b/gae/src/templates/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <meta name="p:domain_verify" content="c50a2f10efca90a090a453d7b07856e8"/>
     <title>{% block title %}Be Set Free{% endblock %}</title>
 </head>
 <body>
