--- a/gae/src/templates/index.html
+++ b/gae/src/templates/index.html
@@ -32,6 +32,7 @@
     <div id="app"></div>
 
     {% block javascripts %}
+        <script src="{{ 'http://localhost:9898' if config.DEBUG }}/static/build/commons.js" type="text/javascript"></script>
         <script src="{{ 'http://localhost:9898' if config.DEBUG }}/static/build/main.js" type="text/javascript"></script>
     {% endblock %}
 
