profile viewing skeleton

--- a/gae/src/templates/index.html
+++ b/gae/src/templates/index.html
@@ -5,28 +5,30 @@
     <title>{% block title %}Be Set Free{% endblock %}</title>
 </head>
 <body>
-    <div id="fb-root"></div>
-    <script>
-        window.fbAsyncInit = function () {
-            FB.init({
-                appId: '821956397936477',
-                xfbml: false,
-                version: 'v2.6'
-            });
-            document.dispatchEvent(new Event('fb_init'));
-        };
+    {% if not config.DEBUG %}
+        <div id="fb-root"></div>
+        <script>
+            window.fbAsyncInit = function () {
+                FB.init({
+                    appId: '821956397936477',
+                    xfbml: false,
+                    version: 'v2.6'
+                });
+                document.dispatchEvent(new Event('fb_init'));
+            };
 
-        (function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) {
-                return;
-            }
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "//connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {
+                    return;
+                }
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+    {% endif %}
 
     <div id="app"></div>
 
