--- a/assets/less/resources.less
+++ b/assets/less/resources.less
@@ -1,4 +1,43 @@
 @import 'variables';
+@import 'resource_bread';
 @import 'resource_breakfast';
 @import 'resource_juicing';
 @import 'resource_grain';
+
+
+.resource {
+  dt {
+    font-weight: bold;
+  }
+
+  dd {
+    font-size: 0.9em;
+    padding: 0.2em 0 0.8em;
+  }
+
+  img {
+    padding: 1em 0;
+  }
+
+  .main {
+    display: flex;
+    flex-flow: row nowrap;
+    padding: 1em;
+    .anime-box();
+
+    img {
+      width: 26em;
+    }
+    div:last-child {
+      margin: 0;
+      padding: 0 2em;
+      h2 {
+        font-size: 1.4em;
+      }
+      & > * {
+        font-size: 0.9em;
+        line-height: 1.4em;
+      }
+    }
+  }
+}
