changed contact details

--- a/assets/less/courses.less
+++ b/assets/less/courses.less
@@ -8,7 +8,7 @@
   }
 
   .words {
-    background: @verylightgray;
+    background: @lightgray;
     text-align: center;
     color: white;
     font-size: 2em;
@@ -29,5 +29,11 @@
   }
   .course_box:nth-child(3n+2) {
     background: @lightbrown;
+  }
+
+  .courses-insert {
+    flex-basis: 100vw;
+    color: @darkgray;
+    padding-left: 4em;
   }
 }
