--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -25,7 +25,7 @@
                 and holistic therapies. As a mom myself I understand the importance of family
                 health and wellness through healthy balanced meals and nutrition. Be assured that
                 I am as passionate about your health as that of my own family! Join me on your
-                personal journey to find the life you were meant to live. a Life free from stress,
+                personal journey to find the life you were meant to live. A life free from stress,
                 or health concerns.</p>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <div class="col-2 logo">
             <img class="img-fluid" src="{% static 'main/img/logo.png' %}" />
         </div>
-        <div class="col-5 co-txt">
+        <div class="col-5 co-txt bg-lime">
             <h4 class="white">Be Set Free Health Solutions</h4>
             <h6 class="white">Holistic Healthcare</h6>
             <h6 class="white">Wellness Consulting/consultation</h6>
@@ -45,20 +45,20 @@
 
 
     <div class="row pt-4">
-        <div class="col-5 offset-1">
+        <div class="col-3 offset-3 p-0">
             <img class="img-fluid" src="{% static 'main/img/home/plant_crush.jpg' %}" />
         </div>
     </div>
     <div class="row pt-4">
-        <div class="col-5 offset-1 services-title">
+        <div class="col-3 offset-3 p-0 services-title">
             <div class="row">
-                <div class="col-5 offset-7">
+                <div class="col-5 offset-7 bg-lime">
                     <h3 class="sign white text-end p-4">Services</h3>
                 </div>
             </div>
-            <img class="img-fluid pb-2" src="{% static 'main/img/home/apple_smoothie.jpg' %}" />
+            <img class="img-fluid py-4" src="{% static 'main/img/home/apple_smoothie.jpg' %}" />
         </div>
-        <div class="col-6 services-txt-box">
+        <div class="col-4 services-txt-box">
             <div class="bg-lightgray services-txt p-5">
                 <h5>Individual, Online, Family, Couple and Group Counseling
                 <h5>Weight and/or Stress Management</h5>
